--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		]
 	},
 	"dependencies": {
-		"@sveltejs/adapter-static": "^3.0.8"
+		"@sveltejs/adapter-static": "^3.0.8",
+		"d3": "^7.9.0"
 	}
 }
